--- a/src/RegexatorCore/RegexatorCore.csproj
+++ b/src/RegexatorCore/RegexatorCore.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CharMatchInfo.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="Text\CSharpLiteralConverter.cs" />
+    <Compile Include="Text\LiteralOptions.cs" />
     <Compile Include="Text\NewLineMode.cs" />
     <Compile Include="Text\LiteralConverter.cs" />
     <Compile Include="Text\LiteralSettings.cs" />
