--- a/src/Pihrtsoft.Text.RegularExpressions/Pihrtsoft.Text.RegularExpressions.csproj
+++ b/src/Pihrtsoft.Text.RegularExpressions/Pihrtsoft.Text.RegularExpressions.csproj
@@ -83,7 +83,7 @@
     <Compile Include="ReplaceItemEqualityComparer.cs" />
     <Compile Include="ReplaceResult.cs" />
     <Compile Include="ReplaceResultEqualityComparer.cs" />
-    <Compile Include="ResultMode.cs" />
+    <Compile Include="ReplacementMode.cs" />
     <Compile Include="SplitData.cs" />
     <Compile Include="SplitItem.cs" />
     <Compile Include="SplitItemCollection.cs" />
