--- a/src/Pihrtsoft.Text.RegularExpressions/Pihrtsoft.Text.RegularExpressions.csproj
+++ b/src/Pihrtsoft.Text.RegularExpressions/Pihrtsoft.Text.RegularExpressions.csproj
@@ -103,6 +103,10 @@
     <None Include="packages.config" />
     <None Include="Regexator_TemporaryKey.pfx" />
   </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\..\packages\CSharpAnalyzers.0.9.30.0\analyzers\dotnet\cs\Pihrtsoft.CodeAnalysis.Common.dll" />
+    <Analyzer Include="..\..\packages\CSharpAnalyzers.0.9.30.0\analyzers\dotnet\cs\Pihrtsoft.CodeAnalysis.CSharp.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
