--- a/src/Pihrtsoft.Text.RegularExpressions/packages.config
+++ b/src/Pihrtsoft.Text.RegularExpressions/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CSharpAnalyzers" version="0.9.50.0" targetFramework="net40-client" />
+  <package id="CSharpAnalyzers" version="0.98.2" targetFramework="net40-client" developmentDependency="true" />
   <package id="LinqToRegex" version="2.3.0" targetFramework="net40-client" />
 </packages>
