--- a/src/Pihrtsoft.Text.RegularExpressions/Pihrtsoft.Text.RegularExpressions.csproj
+++ b/src/Pihrtsoft.Text.RegularExpressions/Pihrtsoft.Text.RegularExpressions.csproj
@@ -39,9 +39,8 @@
     <AssemblyOriginatorKeyFile>Regexator_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Pihrtsoft.Text.RegularExpressions.Linq, Version=2.4.0.0, Culture=neutral, PublicKeyToken=7b6a2af53c8ae8ab, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\LinqToRegex.2.4.0\lib\net40\Pihrtsoft.Text.RegularExpressions.Linq.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Pihrtsoft.Text.RegularExpressions.Linq, Version=2.5.0.0, Culture=neutral, PublicKeyToken=7b6a2af53c8ae8ab, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\LinqToRegex.2.5.0\lib\net40\Pihrtsoft.Text.RegularExpressions.Linq.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -104,8 +103,8 @@
     <None Include="Regexator_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <Analyzer Include="..\..\packages\CSharpAnalyzers.1.2.0-rc\analyzers\dotnet\cs\Roslynator.CSharp.Analyzers.dll" />
-    <Analyzer Include="..\..\packages\CSharpAnalyzers.1.2.0-rc\analyzers\dotnet\cs\Roslynator.Utilities.dll" />
+    <Analyzer Include="..\..\packages\Roslynator.Analyzers.1.3.0-beta\analyzers\dotnet\cs\Roslynator.Core.dll" />
+    <Analyzer Include="..\..\packages\Roslynator.Analyzers.1.3.0-beta\analyzers\dotnet\cs\Roslynator.CSharp.Analyzers.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
