--- a/src/Pihrtsoft.Text.RegularExpressions/packages.config
+++ b/src/Pihrtsoft.Text.RegularExpressions/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CSharpAnalyzers" version="1.2.0-rc" targetFramework="net40-client" developmentDependency="true" />
-  <package id="LinqToRegex" version="2.4.0" targetFramework="net40-client" />
+  <package id="LinqToRegex" version="2.5.0" targetFramework="net40-client" />
+  <package id="Roslynator.Analyzers" version="1.3.0-beta" targetFramework="net40-client" developmentDependency="true" />
 </packages>
